deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-boilerplate-ingress
  namespace: backend-boilerplate
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: backend-boilerplate.tiannaru.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: backend-boilerplate-service
              servicePort: 80
  tls:
    - hosts:
      - backend-boilerplate.tiannaru.xyz
      secretName: backend-boilerplate-tls
